@@ -3,6 +3,16 @@ Release Notes
 Release 0.4.16 - 
   * Check TLS certificates.  See wmbiffrc(5) for 
     details on the certfile option.  
+  * #'s are now only comments in .wmbiffrc at the 
+    beginning of lines or following whitespace, 
+    allowing #'s in (most) passwords.
+  * AppleScript examples for driving Apple's Mail 
+    application in sample.wmbiffrc
+  * Special mailbox action 'msglst' brings up a 
+    transient window showing message headers from IMAP
+    and program output for shell methods.  This is 
+    intended to be faster than starting up a new 
+    mail program or re-executing a script.
 
 Release 0.4.15 - Mar 30, 2003
   * Frobnicate internally stored passwords, partially 
@@ -417,4 +427,4 @@ Release 0.1 - Wed, 17 Nov 1999 00:00:00 +0000
   * Initial release by Gennady Belyakov <gb@ccat.elect.ru>.
 
 
-$Id: NEWS,v 1.43 2003/04/07 09:59:01 bluehal Exp $
+$Id: NEWS,v 1.44 2003/07/03 01:03:27 bluehal Exp $
